# Lab-11-process-summersoul

./: .gitmodules  CMakeLists.txt  CPackConfig.cmake  config.json
demo/: main.cpp
include/: builder.hpp  common.hpp
sources/: builder.cpp
test_project/: CMakeLists.txt
